<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group/>
    <item
        android:id="@+id/home_page"
        android:icon="@drawable/ic_vector"
        android:title="@string/home"
        android:enabled="false"/>
    <item
        android:id="@+id/search_page"
        android:icon="@drawable/ic_magnifyingglass"
        android:title="@string/search"
        android:enabled="true"/>

    <item
        android:id="@+id/counter_calories_page"
        android:icon="@drawable/ic_firesimple"
        android:title="@string/counter"
        android:enabled="true"/>
    <item
        android:id="@+id/calculate_required_calories"
        android:icon="@drawable/ic_lightbulb"
        android:title="@string/calculate"
        android:enabled="true"/>


</menu>