<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_view"
    android:layout_marginHorizontal="@dimen/spacing_too_small"
    android:layout_marginBottom="@dimen/spacing_small"
    app:cardCornerRadius="@dimen/radius_normal"
    app:cardElevation="@dimen/zero">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:background="@color/card_background">

        <TextView
            android:id="@+id/text_grams"
            style="@style/CaptionTextStyle.Medium.PrimaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_350g"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_meal_name"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:lines="1"
            android:text="@string/meal_name"
            android:textColor="@color/text_on_card"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/icon_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_grams" />

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/spacing_small"
            android:contentDescription="@string/remove_item"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>