<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:background="@drawable/card_radius"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_info"
            style="@style/CaptionTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/diabetics_cards_title_1"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_french_fries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:id="@+id/french_fries"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/french_fries"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout_french_fries"
            app:layout_constraintStart_toStartOf="@id/layout_french_fries"
            app:layout_constraintTop_toTopOf="@id/layout_french_fries" />

        <TextView
            android:id="@+id/cal_french_fries"
            style="@style/CaptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_100_french_fries"
            app:layout_constraintEnd_toEndOf="@id/layout_french_fries"
            app:layout_constraintTop_toTopOf="@+id/textView_100_french_fries" />

        <TextView
            android:id="@+id/textView_100_french_fries"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_too_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_100"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@id/layout_french_fries"
            app:layout_constraintEnd_toStartOf="@id/cal_french_fries"
            app:layout_constraintTop_toTopOf="@id/layout_french_fries" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_cheese_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_french_fries">

        <TextView
            android:id="@+id/cheese_burger"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cheese_burger"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout_cheese_burger"
            app:layout_constraintStart_toStartOf="@id/layout_cheese_burger"
            app:layout_constraintTop_toTopOf="@id/layout_cheese_burger" />

        <TextView
            android:id="@+id/cal_cheese_burger"
            style="@style/CaptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_125_cheese_burger"
            app:layout_constraintEnd_toEndOf="@id/layout_cheese_burger"
            app:layout_constraintTop_toTopOf="@+id/textView_125_cheese_burger" />

        <TextView
            android:id="@+id/textView_125_cheese_burger"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_too_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_125"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@id/layout_cheese_burger"
            app:layout_constraintEnd_toStartOf="@id/cal_cheese_burger"
            app:layout_constraintTop_toTopOf="@id/layout_cheese_burger" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_fried_chicken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_cheese_burger">

        <TextView
            android:id="@+id/fried_chicken"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/fried_chicken"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout_fried_chicken"
            app:layout_constraintStart_toStartOf="@id/layout_fried_chicken"
            app:layout_constraintTop_toTopOf="@id/layout_fried_chicken" />

        <TextView
            android:id="@+id/cal_fried_chicken"
            style="@style/CaptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_250_fried_chicken"
            app:layout_constraintEnd_toEndOf="@id/layout_fried_chicken"
            app:layout_constraintTop_toTopOf="@+id/textView_250_fried_chicken" />

        <TextView
            android:id="@+id/textView_250_fried_chicken"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_too_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_250"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@id/layout_fried_chicken"
            app:layout_constraintEnd_toStartOf="@id/cal_fried_chicken"
            app:layout_constraintTop_toTopOf="@id/layout_fried_chicken" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_pizza_hut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_fried_chicken">

        <TextView
            android:id="@+id/pizza_hut"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="Pizza Hut"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout_pizza_hut"
            app:layout_constraintStart_toStartOf="@id/layout_pizza_hut"
            app:layout_constraintTop_toTopOf="@id/layout_pizza_hut" />

        <TextView
            android:id="@+id/cal_pizza_hut"
            style="@style/CaptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_450_pizza_hut"
            app:layout_constraintEnd_toEndOf="@id/layout_pizza_hut"
            app:layout_constraintTop_toTopOf="@+id/textView_450_pizza_hut" />

        <TextView
            android:id="@+id/textView_450_pizza_hut"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_too_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_450"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@id/layout_pizza_hut"
            app:layout_constraintEnd_toStartOf="@id/cal_pizza_hut"
            app:layout_constraintTop_toTopOf="@id/layout_pizza_hut" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nodels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_pizza_hut">

        <TextView
            android:id="@+id/nodels"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Nodels"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout_nodels"
            app:layout_constraintStart_toStartOf="@id/layout_nodels"
            app:layout_constraintTop_toTopOf="@id/layout_nodels" />

        <TextView
            android:id="@+id/cal_nodels"
            style="@style/CaptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_500_nodels"
            app:layout_constraintEnd_toEndOf="@id/layout_nodels"
            app:layout_constraintTop_toTopOf="@+id/textView_500_nodels" />

        <TextView
            android:id="@+id/textView_500_nodels"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_too_small"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_500"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@id/layout_nodels"
            app:layout_constraintEnd_toStartOf="@id/cal_nodels"
            app:layout_constraintTop_toTopOf="@id/layout_nodels" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>